--- a/html/pagina3.html
+++ b/html/pagina3.html
@@ -23,7 +23,7 @@
 				<span>&larr;</span><A HREF="pagina4.html">Mi segunda página HTML</A>
 			</div>
 			<div class="col-md-6">
-				<A ID="enlace3" HREF="pagina2.html">Mi cuarta página HTML</A><span>&rarr;</span>
+				<A ID="enlace3" HREF="pagina2.html" textContent="Mi cuarta página HTML">Mi cuarta página HTML</A><span>&rarr;</span>
 			</div>
 		</div>
 	</BODY>
